优化配置